[package]
name = "insub"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
bip39 = { version = "2.2.2", features = ["rand"] }
hex = "0.4"
zeroize = "1"
x25519-dalek = { version = "3", features = ["static_secrets", "getrandom"] }
chacha20poly1305 = "0.11.0"
hkdf = "0.13.0"
sha2 = "0.11.0"
rand = "0.10.2"
snow = "0.10.0"
argon2 = "0.5.3"
